# app/uk/gov/hmrc/pillar2submissionapi/controllers/submission/OverseasReturnNotificationController.scala
@@ -20,23 +20,26 @@ import play.api.libs.json.{JsError, JsSuccess, Json}
 import play.api.mvc.{Action, AnyContent, ControllerComponents}
 import uk.gov.hmrc.http.HeaderCarrier
 import uk.gov.hmrc.pillar2submissionapi.controllers.actions.{IdentifierAction, Pillar2IdHeaderAction, SubscriptionDataRetrievalAction}
-import uk.gov.hmrc.pillar2submissionapi.controllers.error.{EmptyRequestBody, InvalidJson}
+import uk.gov.hmrc.pillar2submissionapi.controllers.error._
+import uk.gov.hmrc.pillar2submissionapi.models.obligationsandsubmissions.ObligationsAndSubmissions
 import uk.gov.hmrc.pillar2submissionapi.models.overseasreturnnotification.ORNSubmission
 import uk.gov.hmrc.pillar2submissionapi.services.OverseasReturnNotificationService
 import uk.gov.hmrc.play.bootstrap.backend.controller.BackendController
 import uk.gov.hmrc.play.http.HeaderCarrierConverter
 
+import java.time.LocalDate
 import javax.inject.{Inject, Singleton}
 import scala.concurrent.{ExecutionContext, Future}
+import scala.util.Try
 
 @Singleton
 class OverseasReturnNotificationController @Inject() (
-  cc:               ControllerComponents,
-  identify:         IdentifierAction,
-  pillar2Action:    Pillar2IdHeaderAction,
-  getSubscription:  SubscriptionDataRetrievalAction,
-  submitORNService: OverseasReturnNotificationService
-)(implicit ec:      ExecutionContext)
+  cc:              ControllerComponents,
+  identify:        IdentifierAction,
+  pillar2Action:   Pillar2IdHeaderAction,
+  getSubscription: SubscriptionDataRetrievalAction,
+  ornService:      OverseasReturnNotificationService
+)(implicit ec:     ExecutionContext)
     extends BackendController(cc) {
 
   def submitORN: Action[AnyContent] = (pillar2Action andThen identify andThen getSubscription).async { request =>
@@ -45,7 +48,7 @@ class OverseasReturnNotificationController @Inject() (
       case Some(request) =>
         request.validate[ORNSubmission] match {
           case JsSuccess(value, _) =>
-            submitORNService
+            ornService
               .submitORN(value)
               .map(response => Created(Json.toJson(response)))
           case JsError(_) => Future.failed(InvalidJson)
@@ -60,7 +63,7 @@ class OverseasReturnNotificationController @Inject() (
       case Some(request) =>
         request.validate[ORNSubmission] match {
           case JsSuccess(value, _) =>
-            submitORNService
+            ornService
               .amendORN(value)
               .map(response => Ok(Json.toJson(response)))
           case JsError(_) => Future.failed(InvalidJson)
@@ -68,4 +71,19 @@ class OverseasReturnNotificationController @Inject() (
       case None => Future.failed(EmptyRequestBody)
     }
   }
+
+  def retrieveORN(accountingPeriodFrom: String, accountingPeriodTo: String): Action[AnyContent] =
+    (pillar2Action andThen identify andThen getSubscription).async { implicit request =>
+      val hc: HeaderCarrier = HeaderCarrierConverter.fromRequest(request).withExtraHeaders("X-Pillar2-Id" -> request.clientPillar2Id)
+
+      Try {
+        val accountingPeriod =
+          ObligationsAndSubmissions(fromDate = LocalDate.parse(accountingPeriodFrom), toDate = LocalDate.parse(accountingPeriodTo))
+        if (accountingPeriod.validDateRange) {
+          ornService
+            .retrieveORN(accountingPeriodFrom, accountingPeriodTo)(hc)
+            .map(response => Ok(Json.toJson(response)))
+        } else { Future.failed(InvalidDateRange) }
+      }.getOrElse(Future.failed(InvalidDateFormat))
+    }
 }
